--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
 <body>
 
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdprcyNkPM51nCVpfhnIc217j8XexrhgpF9ZSB1-urfFZmGNQ/viewform?embedded=true" width="640" height="378" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdprcyNkPM51nCVpfhnIc217j8XexrhgpF9ZSB1-urfFZmGNQ/viewform?usp=sf_link" frameborder="0">
+              </iframe>
 
 </body>
 
