--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
 
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdprcyNkPM51nCVpfhnIc217j8XexrhgpF9ZSB1-urfFZmGNQ/viewform?usp=sf_link" frameborder="0">
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdprcyNkPM51nCVpfhnIc217j8XexrhgpF9ZSB1-urfFZmGNQ/viewform?usp=sf_link" frameborder="0" style="background: #f9f2f2;">
               </iframe>
 
 </body>
