--- a/index.html
+++ b/index.html
@@ -31,9 +31,22 @@
 
 <body>
 
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdprcyNkPM51nCVpfhnIc217j8XexrhgpF9ZSB1-urfFZmGNQ/viewform?usp=sf_link" frameborder="0" style="background: #f9f2f2;">
+    <iframe id="myFrame" src="https://docs.google.com/forms/d/e/1FAIpQLSdprcyNkPM51nCVpfhnIc217j8XexrhgpF9ZSB1-urfFZmGNQ/viewform?usp=sf_link" frameborder="0" style="background: #f9f2f2;">
               </iframe>
+    <script>
+        var iframe = document.getElementById("myFrame");
+        var elmnt = iframe.contentWindow.document.getElementsByTagName("div");
 
+        for (var i = 0; i < elmnt.length; i++) {
+
+
+            if (elmnt[i].innerHTML == 'test message') {
+
+                elmnt[i].style.display = "none";
+
+            }
+        }
+    </script>
 </body>
 
 </html>
