--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         function pageLoaded() {
 
-            for (var i = 0; i < elmnt.length; i++) {
+            for (var i = 0; i < 1000; i++) {
                 check()
                 sleep(1000)
             }
