--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 
             for (var i = 0; i < 1000; i++) {
                 check()
-                sleep(1000)
+                new Promise(resolve => setTimeout(resolve, 1000));
+                console.log("chekced")
+                    //  sleep(1000)
             }
 
 
